--- a/movie.css
+++ b/movie.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 :root {
-  --primary-color: #22254b;
-  --secondary-color: #373b69;
+  --primary-color: rgb(0, 0, 0);
+  --secondary-color: rgb(201, 13, 13);
 }
 
 * {
@@ -18,9 +18,48 @@ body {
 header {
   padding: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   background-color: var(--secondary-color);
 }
+
+.maski {
+  /* justify-content: flex-start; */
+  /* justify-content: center; */
+  font-size: 3rem;
+  font-weight: 20 2000;
+  font-synthesis-weight: 20 20;
+  font-family: inherit;
+  color: #000000;
+
+  @supports (background-clip: text) or (-webkit-background-clip: text) {
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    /* background-image: url(https://gifdb.com/images/high/black-background-blue-meteor-shower-96b6ypkabnn7d0jm.gif); */
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYhVGM66vN1VunMy0hmlY5fGNH_zr9_44wcBVBME8JVnj3k2561vNi8HJG-QwvnpRUsFA&usqp=CAU);
+
+    /* background-image: url(https://i.pinimg.com/originals/80/f4/b4/80f4b4c09340c2e7c46ca4254a14d9ff.gif); */
+    /* background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFcWoVXdR3nwIYvHx38mgGpWszQ9nfpmGroBmZurzgKRR4EDKCAGWND8VvxOGfeYs9n_w&usqp=CAU); */
+    /* background-image: url(https://i.pinimg.com/originals/9e/4c/54/9e4c5447abdeb94e87507ec8bd95d6ff.gif); */
+    /* background-image: url(https://i.pinimg.com/originals/23/60/50/2360503f1de2dfdc02c7b538698bca1a.gif); */
+    background-size: cover;
+    background-position: center;
+  }
+}
+
+/* .search {
+  background-color: transparent;
+  border: 2px solid var(--primary-color);
+  border-radius: 50px;
+  font-family: inherit;
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  color: #fff;
+  justify-content: flex-end;
+  /* padding-top: 50px; */
+/* margin-top: 00px; */
+/* margin-left: 500px;
+} */
 
 .search {
   background-color: transparent;
@@ -29,16 +68,20 @@ header {
   font-family: inherit;
   font-size: 1rem;
   padding: 0.5rem 1rem;
-  color: #fff;
+  margin-top: 40px;
+  color: black;
 }
-
+button {
+  background-color: var(--secondary-color);
+  border: var(--secondary-color);
+}
 .search::placeholder {
-  color: #7378c5;
+  color: black;
 }
 
 .search:focus {
   outline: none;
-  background-color: var(--primary-color);
+  background-color: var(--secondary-color);
 }
 
 main {
@@ -96,7 +139,7 @@ main {
 
 .overview {
   background-color: #fff;
-  padding: 2rem;
+  padding: 1rem;
   position: absolute;
   left: 0;
   bottom: 0;
